UI: Fix organization logo bleed in 1024 view

--- a/theme/pxt.less
+++ b/theme/pxt.less
@@ -319,10 +319,10 @@ div.simframe > iframe {
 }
 
 /* Logo */
-.ui.item.logo {
-    font-size: 2.8rem;
+.ui.menu .ui.item.logo {
+    font-size: 2.2rem;
     margin: 0;
-    padding: 0.3rem;
+    padding: 0rem !important;
 }
 .ui.item.logo .name {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, inherit;
@@ -335,7 +335,7 @@ div.simframe > iframe {
 }
 
 .ui.item.logo img {
-    max-height: 2.5rem;
+    max-height: 2.0rem;
     margin-left: 1rem;
     margin-right: 1rem;
 }
